--- a/Reduction.cbp
+++ b/Reduction.cbp
@@ -37,9 +37,6 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="asdasdasdasd.jpeg" />
-		<Unit filename="difference.fsh" />
-		<Unit filename="fragment.fsh" />
 		<Unit filename="glad.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -50,8 +47,13 @@
 		<Unit filename="imgui_tables.cpp" />
 		<Unit filename="imgui_widgets.cpp" />
 		<Unit filename="main.cpp" />
-		<Unit filename="target.jpg" />
-		<Unit filename="vertex.vsh" />
+		<Unit filename="shaders/color.fsh" />
+		<Unit filename="shaders/difference.fsh" />
+		<Unit filename="shaders/fragment.fsh" />
+		<Unit filename="shaders/lens.fsh" />
+		<Unit filename="shaders/outline.fsh" />
+		<Unit filename="shaders/raster.vsh" />
+		<Unit filename="shaders/vertex.vsh" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
