--- a/imgui.ini
+++ b/imgui.ini
@@ -11,6 +11,10 @@ Pos=79,76
 Size=166,166
 
 [Window][Reduction]
-Pos=504,79
-Size=350,398
+Pos=467,68
+Size=350,447
+
+[Window][Raster Doer]
+Pos=363,226
+Size=504,273
 
